// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global Navigation Mobile is closed on left side 1`] = `
.c0 {
  background-color: #FFFFFF;
  font-size: 1.125rem;
  height: 100vh;
  left: 0%;
  margin-top: 2.75rem;
  overflow-y: auto;
  padding: 0 30px;
  position: fixed;
  top: 0%;
  -webkit-transform: translate(-100%);
  -ms-transform: translate(-100%);
  transform: translate(-100%);
  -webkit-transition: all 300ms;
  transition: all 300ms;
  width: 100%;
  z-index: 100;
}

.c0 > .side-panel {
  margin-top: 0;
}

.c0 li {
  margin-left: 24px;
  padding: 12px 0;
}

.c0 li svg {
  margin-left: -24px;
}

.c0 li .external {
  color: #57666E;
}

.c0 li .external:hover {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 li .external:visited {
  color: #57666E;
}

.c0 li .external:visited:hover {
  color: #000000;
}

.c0 li:first-child {
  padding-top: 0;
}

.c0 li:last-child {
  padding-bottom: 0;
}

.c0 ul {
  list-style: none;
  margin: 0;
  padding: 24px 0;
}

<div
  className="c0 side-panel"
  open={false}
  origin="left"
>
  <ul>
    <li>
      Test
    </li>
  </ul>
</div>
`;

exports[`Global Navigation Mobile is closed on right side 1`] = `
.c0 {
  background-color: #FFFFFF;
  font-size: 1.125rem;
  height: 100vh;
  left: 0%;
  margin-top: 2.75rem;
  overflow-y: auto;
  padding: 0 30px;
  position: fixed;
  top: 0%;
  -webkit-transform: translate(100%);
  -ms-transform: translate(100%);
  transform: translate(100%);
  -webkit-transition: all 300ms;
  transition: all 300ms;
  width: 100%;
  z-index: 100;
}

.c0 > .side-panel {
  margin-top: 0;
}

.c0 li {
  margin-left: 24px;
  padding: 12px 0;
}

.c0 li svg {
  margin-left: -24px;
}

.c0 li .external {
  color: #57666E;
}

.c0 li .external:hover {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 li .external:visited {
  color: #57666E;
}

.c0 li .external:visited:hover {
  color: #000000;
}

.c0 li:first-child {
  padding-top: 0;
}

.c0 li:last-child {
  padding-bottom: 0;
}

.c0 ul {
  list-style: none;
  margin: 0;
  padding: 24px 0;
}

<div
  className="c0 side-panel"
  open={false}
  origin="right"
>
  <ul>
    <li>
      Test
    </li>
  </ul>
</div>
`;

exports[`Global Navigation Mobile is open 1`] = `
.c0 {
  background-color: #FFFFFF;
  font-size: 1.125rem;
  height: 100vh;
  left: 0%;
  margin-top: 2.75rem;
  overflow-y: auto;
  padding: 0 30px;
  position: fixed;
  top: 0%;
  -webkit-transform: translate(0%);
  -ms-transform: translate(0%);
  transform: translate(0%);
  -webkit-transition: all 300ms;
  transition: all 300ms;
  width: 100%;
  z-index: 100;
}

.c0 > .side-panel {
  margin-top: 0;
}

.c0 li {
  margin-left: 24px;
  padding: 12px 0;
}

.c0 li svg {
  margin-left: -24px;
}

.c0 li .external {
  color: #57666E;
}

.c0 li .external:hover {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 li .external:visited {
  color: #57666E;
}

.c0 li .external:visited:hover {
  color: #000000;
}

.c0 li:first-child {
  padding-top: 0;
}

.c0 li:last-child {
  padding-bottom: 0;
}

.c0 ul {
  list-style: none;
  margin: 0;
  padding: 24px 0;
}

<div
  className="c0 side-panel"
  open={true}
  origin="right"
>
  <ul>
    <li>
      Test
    </li>
  </ul>
</div>
`;

exports[`Theme Wrapper Returns component with default theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.25rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: normal;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0.5rem 1rem;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #EF483E;
  border-color: #EF483E;
  color: #FFFFFF;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c0:hover {
  background-color: #D41F14;
  border-color: #D41F14;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover {
  background-color: #FF847C;
  border-color: #FF847C;
}

<button
  className="c0"
  onClick={[Function]}
>
  
</button>
`;

exports[`Theme Wrapper Returns component with test theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.25rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: normal;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0.5rem 1rem;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #B3974B;
  border-color: #B3974B;
  color: #FFFFFF;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c0:hover {
  background-color: #FFD86B;
  border-color: #FFD86B;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover {
  background-color: #736130;
  border-color: #736130;
}

<button
  className="c0"
  onClick={[Function]}
>
  
</button>
`;
